# arduino-projects

./: README.md
digital/arduimotion/: Makefile  README.md  main.c
digital/arduimotion/driver/: AUTHORS  Makefile.am  bootstrap.sh  config.h.in  configure.ac  main.c  xlib_bridge.c  xlib_bridge.h
digital/arduimotion/driver/.deps/: main.Po  xlib_bridge.Po
digital/lg_intelligent_sensor/: Makefile  README.md  lg_int_sensor.c
digital/lg_ultrasond_vol_control/: Makefile  README.md
digital/lg_ultrasound_vol_control/: README.md  meter-device-singlepin.c  meter-device.c
include/: common.h  serial.h
lg_tv_library/: lgprotocol.c  lgprotocol.h
sound_and_bubbles/: Makefile  README.md  sound_detector.c
